# claws-mail-plugins

./: .travis.yml  gpg.priv.enc
acpi_notifier/: .cvsignore  ChangeLog  INSTALL  Makefile.am  NEWS  PATCHSETS  README  configure.ac
acpi_notifier/debian/: README.Debian  changelog  control  files  rules
acpi_notifier/m4/: Makefile.am
acpi_notifier/po/: Makevars  POTFILES.in  ca.po  cs.po  de.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  uk.po  zh_CN.po
acpi_notifier/src/: Makefile.am  acpi_notifier.c
address_dup_finder/src/: Makefile.am  address_dup_finder.c  adf_finder.c  adf_finder.h  adf_gtk.c  adf_gtk.h  adf_prefs.c  adf_prefs.h
archive/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  PATCHSETS  README  TODO  aclocal.m4  commitHelper  config.h.in  configure  configure.ac
archive/po/: .cvsignore  Makevars  POTFILES.in  archive.pot  ca.po  cs.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  nl.po  pt_BR.po  ru.po  sk.po  uk.po
archive/src/: Makefile.am  archiver.c  archiver.h  archiver_gtk.c  archiver_prefs.c  archiver_prefs.h  libarchive_archive.c  libarchive_archive.h
att_remover/src/: Makefile.am  att_remover.c
attachwarner/: AUTHORS  ChangeLog  Makefile.am  PATCHSETS  README  TODO  autogen.sh  configure.ac
attachwarner/po/: Makevars  POTFILES.in  attachwarner.pot  ca.po  cs.po  de.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  pl.po  pt_BR.po  ru.po  sk.po  sr.po
attachwarner/src/: Makefile.am  attachwarner.c  attachwarner.h  attachwarner_prefs.c  attachwarner_prefs.h  claws.def
cachesaver/: .cvsignore  AUTHORS  COPYING  ChangeLog  NEWS  PATCHSETS  configure.ac
cachesaver/config/: .cvsignore
cachesaver/debian/: README.Debian  changelog  control  files  rules
cachesaver/src/: Makefile.am  plugin.c
cachesaver/win32/: Makefile  cachesaver.def  cachesaver.dsp  cachesaver_d.dsp  version.rc
clamd/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  PATCHSETS  README  autogen.sh  configure.ac
clamd/libclamd/: Makefile.am  Makefile.in  clamd-plugin.c  clamd-plugin.h
clamd/po/: Makevars  POTFILES.in  clamd.pot  cs.po  en_GB.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  pt_BR.po  sk.po  uk.po
clamd/src/: Makefile.am  Makefile.in  clamav_plugin.c  clamav_plugin.h  clamav_plugin_gtk.c
etpan-privacy/: AUTHORS  ChangeLog  Makefile.am  PATCHSETS  README  commitHelper  configure.ac
etpan-privacy/debian/: README.Debian  changelog  control  files  rules
etpan-privacy/src/: Makefile.am  etpan_privacy.c  etpan_privacy.h  mailprivacy.c  mailprivacy.h  mailprivacy_gnupg.c  mailprivacy_gnupg.h  mailprivacy_smime.c  mailprivacy_smime.h  mailprivacy_tools.c  mailprivacy_tools.h  mailprivacy_types.h  plugin.c  prefs_privacy.c  prefs_privacy.h
fancy/: COPYING  ChangeLog  PATCHSETS  README  commitHelper  configure.ac
fancy/po/: Makevars  POTFILES.in  ca.po  cs.po  es.po  fancy_plugin.pot  fi.po  fr.po  hu.po  id.po  it.po  ja.po  nl.po  ru.po  sk.po
fancy/src/: Makefile.am  fancy_prefs.c  fancy_prefs.h  fancy_viewer.c  fancy_viewer.h
fetchinfo/: .cvsignore  ChangeLog  Makefile.am  PATCHSETS  README  commitHelper  configure.ac
fetchinfo/debian/: README.Debian  changelog  control  rules
fetchinfo/src/: Makefile.am  fetchinfo_plugin.c  fetchinfo_plugin.h  fetchinfo_plugin_gtk.c  fetchinfo_plugin_gtk.deps  plugin_version.h.in
fetchinfo/win32/: .cvsignore  Makefile  fetchinfo.def  fetchinfo.dsp  fetchinfo.dsw  fetchinfo_d.dsp  fetchinfo_d.dsw  fetchinfo_gtk.def  fetchinfo_gtk.dsp  fetchinfo_gtk_d.dsp  version.rc.in
ghostscript-viewer/: .cvsignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
ghostscript-viewer/config/: .cvsignore
ghostscript-viewer/m4/: .cvsignore  ChangeLog  Makefile.am
ghostscript-viewer/po/: .cvsignore  ChangeLog  Makevars  POTFILES.in  de.po  es.po  fr.po  pt_BR.po  sk.po
ghostscript-viewer/src/: .cvsignore  Makefile.am  plugin.c  viewer.c  viewer.glade  viewer.h  viewerprefs.c  viewerprefs.glade  viewerprefs.h
gtkhtml2_viewer/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  PATCHSETS  configure.ac
gtkhtml2_viewer/debian/: README.Debian  changelog  control  copyright  rules
gtkhtml2_viewer/libgtkhtml/: Makefile.am  gtkhtmlcontext.c  gtkhtmlcontext.h
gtkhtml2_viewer/po/: .cvsignore  ChangeLog  Makefile.in.in  Makevars  POTFILES.in  ca.po  cs.po  de.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sr.po  zh_CN.po
gtkhtml2_viewer/src/: Makefile.am  claws.def  gtkhtml2_prefs.c  gtkhtml2_prefs.h  gtkhtml2_viewer.c  version.rc
lcdproc/: Makefile.in  README  aclocal.m4  configure  configure.ac  mkinstalldirs  pluginconfig.h.in
lcdproc/src/: Makefile.am  lcdproc.c
maildir/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  PATCHSETS  configure.ac
maildir/debian/: README.Debian  changelog  control  rules
maildir/doc/: README.xml
maildir/src/: .cvsignore  Makefile.am  (+7 more)
mailmbox/: ChangeLog  Makefile.am  Makefile.in  PATCHSETS  README  aclocal.m4  commitHelper  configure.ac  mkinstalldirs
newmail/: AUTHORS  ChangeLog  INSTALL  NEWS  PATCHSETS  README  configure.ac
notification/: .cvsignore  ChangeLog  INSTALL  Makefile.am  PATCHSETS  README  commitHelper  configure.ac
pdf_viewer/: AUTHORS  COPYING  ChangeLog  PATCHSETS  README  commitHelper  configure.ac
perl/: AUTHORS  COPYING  ChangeLog  INSTALL  InsertCompile  Makefile.am  NEWS  PATCHSETS  README  cm_perl.pod  configure.ac  sc_perl.pod
pgpinline/: .cvsignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  pluginconfig.h.in
python/: .cvsignore  ChangeLog  Makefile.am  PATCHSETS  README  commitHelper  configure.ac
rssyl/: AUTHORS  COPYING  ChangeLog  Makefile.am  PATCHSETS  TODO  autogen.sh  commitHelper  configure.ac
smime/: .cvsignore  ChangeLog  NEWS  PATCHSETS  README  configure.ac
synce/: .cvsignore  ChangeLog  Makefile.am  PATCHSETS  README  configure.ac
vcalendar/: .cvsignore  COPYING  ChangeLog  Makefile.am  PATCHSETS  README  autogen.sh  commitHelper  config.h.in  configure.ac  pluginconfig.h.in
(+680 files in other folders)
