SUBDIRS = src

EXTRA_DIST = \
	COPYING \
	INSTALL \
	README \
	ChangeLog \
	autogen.sh \
	win32/Makefile \
	win32/fetchinfo.def \
	win32/fetchinfo.dsp \
	win32/fetchinfo.dsw \
	win32/fetchinfo_d.dsp \
	win32/fetchinfo_d.dsw \
	win32/fetchinfo_gtk.def \
	win32/fetchinfo_gtk.dsp \
	win32/fetchinfo_gtk_d.dsp

